# ray-tracer-2020

./: .gitignore
archBasic/: CMakeLists.txt
archBasic/src/core/: rt3.h
project 03/src/cameras/: orthographic.cpp
project 03/src/core/: background.h  buffer.h  error.h  film.cpp
project01/: README.md  main  rtracer
project01/scenes/: interpolated_bkg.xml  simple_bkg.xml  test_scene.xml
project01/src/: camera.h  film.h  main.cpp  paramset.h  parser.h  vec3.h
project02/src/: background.h  camera.h  main.cpp  orthographic.h  parser.h  point3D.h  ray.h  scene_xml_params.h  vec3.h
project03/: LICENSE  README.md  rtracer
project03/scenes/: interpolated_bkg.xml  ortho.xml  persp.xml
project03/src/: api.h  camera.h  film.h  integrator.h  lookAt.h  main.cpp  material.h  object.h  orthographic.h  parser.h  perspective.h  point2D.h  point3D.h  primitive.h  rt3.h  scene_xml_params.h  sphere.h  surfel.h  vec3.h
project03/src/cameras/: orthographic.h  perspective.cpp  perspective.h
project03/src/core/: api.cpp  api.h  background.cpp  camera.cpp  camera.h  error.cpp  film.h  image_io.cpp  image_io.h  integrator.cpp  integrator.h  paramset.h  parser.cpp  parser.h  rt3-base.h  (+2 more)
project04/: README.md  rtracer
project04/scenes/: flat_material.xml  flat_material_ortho.xml  ortho.xml
project04/src/: material.h  point3D.h  primitive.h  rt3.h  sphere.h
project05/: rtracer
project05/scenes/: blinn_directional.xml  combined.xml  flat_material_ortho.xml
project06/: README.md  rtracer
project06/scenes/: ambient.xml  spotlight.xml  teapot_persp.xml  three_sphere_ortho.xml  triangle.xml
project07/: README.md  rtracer
project07/scenes/: directional.xml  flat_material.xml  point.xml  table.xml  teapot_ortho.xml  teapot_persp.xml  three_sphere.xml
(+86 files in other folders)
